# Reinforcement-learning-for-sail-trim-optimization-in-a-simulated-yacht-model

./: .gitignore  README.md  pyproject.toml
data/: polar_data_preprocessing.py  read_netcdf_files.py  split_wind_data.py  wind_data_preprocessing.py
main/: config.py  main.py  run_ddpg.py  run_ppo.py  run_sac.py  run_td3.py
results/metrics/: benchmark_time.csv  eval_42v2.csv  eval_43v2.csv  eval_44v2.csv  eval_45v2.csv  eval_46v2.csv  eval_by_wind.csv  eval_summary.csv  results_ddpg_500000_42v2_1500.csv  results_ddpg_500000_43v2_1500.csv  results_ddpg_500000_44v2_1500.csv  results_ddpg_500000_45v2_1500.csv  results_ddpg_500000_46v2_1500.csv  results_ppo_500000_42v2_1500.csv  results_ppo_500000_43v2_1500.csv  results_ppo_500000_44v2_1500.csv  results_ppo_500000_45v2_1500.csv  results_ppo_500000_46v2_1500.csv  results_sac_500000_42v2_1500.csv  results_sac_500000_43v2_1500.csv  results_sac_500000_44v2_1500.csv  results_sac_500000_45v2_1500.csv  results_sac_500000_46v2_1500.csv  results_td3_500000_42v2_1500.csv  results_td3_500000_43v2_1500.csv  results_td3_500000_44v2_1500.csv  results_td3_500000_45v2_1500.csv  results_td3_500000_46v2_1500.csv
simulation/: LICENSE
simulation/gym_sailing/envs/: sail_trim_env.py
simulation/gym_sailing/physics/: boat.py  sailboat.py
training/: benchmark_time.py  evaluate.py  helpers.py  learning_speed.py  mdp.py  reward.py  statistical_tests.py  train.py  validation.py
utils/: calibrate_physics.py  logging_csv.py  paths.py  plot_compute_time.py  plot_deterministic.py  plot_training_results.py  plot_wind_speed.py
(+2 files in other folders)
